# services/revuelta-api/src/main/java/com/revuelta/api/RevueltaApiApplication.java
@@ -2,8 +2,9 @@ package com.revuelta.api;
 
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.boot.security.autoconfigure.UserDetailsServiceAutoConfiguration;
 
-@SpringBootApplication
+@SpringBootApplication(exclude = UserDetailsServiceAutoConfiguration.class)
 public class RevueltaApiApplication {
 
     public static void main(String[] args) {
